Details info functionality update